# dnsbot

./: .build.yml  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DONATE.md  Dockerfile  README.md  flake.nix  module.nix  package.nix
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
